# MyTorch

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
Example/: example.py
MyTorch/: __init__.py  autodiff.py  datasets.py  module.py  operators.py  scalar.py  scalar_functions.py  tensor_data.py  tensor_ops.py  testing.py
Scripts/: create_m0_dir.sh
minitorch-module0/minitorch/: operators.py  testing.py
minitorch_module0/: pyproject.toml
minitorch_module0/minitorch/: operators.py  testing.py
minitorch_module0/tests/: test_operators.py
tests/: conftest.py  test_module.py  test_operators.py
